Replaced calls to Float constructor.